manifests/lambda.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: lambda
  name: lambda
  namespace: lambda
  # argotrigger: blah
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lambda
  strategy: {}
  template:
    metadata:
      labels:
        app: lambda
      namespace: lambda
    spec:
      containers:
      - image: gwright99/lambda_py3.11:base
        name: lambda
        # command: [ "/bin/bash" ] # , "/var/task/entry_script.sh" ] 
        # args: ["-c", "/var/task/entry_script.sh app.handler"]
        # args: ["app.handler"]
        ports:
        - containerPort: 8080
      - image: nginx:latest
        name: mynginx
        ports:
        - containerPort: 8000
        volumeMounts:
          - name: nginx-message
            mountPath: /usr/share/nginx/html/

      # https://pwittrock.github.io/docs/tasks/configure-pod-container/configure-pod-configmap/
      volumes:
        - name: nginx-message
          configMap:
            name: nginx-message
            items:
              - key: index.html
                path: index.html
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: lambda2
  name: lambda2
  namespace: lambda
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lambda2
  strategy: {}
  template:
    metadata:
      labels:
        app: lambda2
      namespace: lambda
    spec:
      containers:
      - image: gwright99/lambda_py3.11:base
        name: lambda2
        # command: ["sleep", "300"]
        # command: [ "/bin/bash" ] # , "/var/task/entry_script.sh" ]
        # args: ["-c", "/var/task/entry_script.sh app2.handler"]
        # args: ["app2.handler"]
        ports:
        - containerPort: 8080
      - image: nginx:latest
        name: mynginx
        ports:
        - containerPort: 8000
        volumeMounts:
          - name: nginx-message2
            mountPath: /usr/share/nginx/html/
      
      # https://pwittrock.github.io/docs/tasks/configure-pod-container/configure-pod-configmap/
      volumes:
        - name: nginx-message2
          configMap:
            name: nginx-message
            items:
              - key: index.html
                path: index.html
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: lambda
  name: lambda
  namespace: lambda
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: lambda
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: lambda
  name: lambda-mynginx
  namespace: lambda
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 80
  selector:
    app: lambda
status:
  loadBalancer: {}
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   creationTimestamp: null
#   labels:
#     app: lambda2
#   name: lambda2
#   namespace: lambda
# spec:
#   ports:
#   - port: 8080
#     protocol: TCP
#     targetPort: 8080
#   selector:
#     app: lambda2
# status:
#   loadBalancer: {}
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   creationTimestamp: null
#   labels:
#     app: lambda2
#   name: lambda-mynginx
#   namespace: lambda
# spec:
#   ports:
#   - port: 8000
#     protocol: TCP
#     targetPort: 80
#   selector:
#     app: lambda2
# status:
#   loadBalancer: {}
---
# Cheating -- to handle GETS to Lambda (which only handles POSTS) just redirect to nginx.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    example: lambda
  name: lambda
  namespace: lambda
spec:
  hostnames:
  - lambda.grahamwrightk8s.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: public-cloudflare
    namespace: gloo-system
  rules:
    # Redirect Lambda to NGINX warning to use Post
    - matches:
      - method: "GET"
      backendRefs:
        - name: lambda-mynginx
          kind: Service
          group: ""
          port: 8000
          #weight: 1

    # Actual code
    - matches:
      # Composite match (POST + Prefix)
      # Example: https://gateway-api.sigs.k8s.io/api-types/httproute/#backendrefs-optional
      # REMINDER: Changes cant be kubectl applied since ArgoCD is in control!
      - path:
          type: PathPrefix 
          value: "/test"
        method: POST
      
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: "/2015-03-31/functions/function/invocations"

      backendRefs:
        - name: lambda
          kind: Service
          group: ""
          port: 8080
          #weight: 1
